Fix empty img src

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <a href=""><img src="" alt="" class="logo"/></a>
+        <a href="#" class="logo">Mathopolis</a>
     </header>
 
     <main>
@@ -21,18 +21,18 @@
             <ul class="testimonials list">
                 <li>
                     <p>I am a biochemist, but I loved helping students explore a logic puzzle about a pirate captain and crew (complete with pirate hats).</p>
-                    <h3>David H.</h3>
-                    <h4>Festival Volunteer</h4>
+                    <p>David H.</p>
+                    <p>Festival Volunteer</p>
                 </li>
                 <li>
                     <p>I am a biochemist, but I loved helping students explore a logic puzzle about a pirate captain and crew (complete with pirate hats).</p>
-                    <h3>David H.</h3>
-                    <h4>Festival Volunteer</h4>
+                    <p>David H.</p>
+                    <p>Festival Volunteer</p>
                 </li>
                 <li>
                     <p>I am a biochemist, but I loved helping students explore a logic puzzle about a pirate captain and crew (complete with pirate hats).</p>
-                    <h3>David H.</h3>
-                    <h4>Festival Volunteer</h4>
+                    <p>David H.</p>
+                    <p>Festival Volunteer</p>
                 </li>
             </ul>
         </section>
@@ -56,26 +56,28 @@
         <p>We're a fiscally-sponsored project of a 501(c)3, Social and Environmental Entrepreneurs.</p>
         <nav class="footer-nav">
             <ul>
-            <li><a href="">Students</a></li>
-            <li><a href="">Parents</a></li>
-            <li><a href="">Teachers</a></li>
-            <li><a href="">Volunteers</a></li>
-            <li><a href="">Events</a></li>
-            <li><a href="">Puzzles</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">News</a></li>
-            <li><a href="">Store</a></li>
-            <li><a href="">Donate</a></li>
+                <li><a href="#">Students</a></li>
+                <li><a href="#">Parents</a></li>
+                <li><a href="#">Teachers</a></li>
+                <li><a href="#">Volunteers</a></li>
+                <li><a href="#">Events</a></li>
+                <li><a href="#">Puzzles</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">News</a></li>
+                <li><a href="#">Store</a></li>
+                <li><a href="#">Donate</a></li>
             </ul>
         </nav>
         <h2>Follow us:</h2>
-        <div class="socials">
-            <a href=""> <img src="" alt="twitter" /></a>
-            <a href=""> <img src="" alt="linkedin" /></a>
-            <a href=""> <img src="" alt="instagramm" /></a>
-            <a href=""> <img src="" alt="facebook" /></a>
-            <a href=""> <img src="" alt="youtube" /></a>
-        </div>
+        <nav class="socials">
+            <ul>
+                <li><a href="#">Twitter</a></li>
+                <li><a href="#">LinkedIn</a></li>
+                <li><a href="#">Instagram</a></li>
+                <li><a href="#">Facebook</a></li>
+                <li><a href="#">YouTube</a></li>
+            </ul>
+        </nav>
         <p>© 2007–2022 Mathopolis</p>
     </footer>
 </body>
