Add link to style.css & fix class names

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
     <header>
@@ -16,9 +17,9 @@
             <h2>Make magical math moments in your community.</h2>
             <p>Mathopolis relies on volunteers to help create magical math moments for kids. We have a number of ways to get involved, from playing math puzzles in a virtual classroom to hosting your own festival. </p>
         </section>
-        <section class="testimonals">
+        <section class="testimonials">
             <h2>Testimonials</h2>
-            <ul class="testimonials list">
+            <ul class="testimonials-list">
                 <li>
                     <p>I am a biochemist, but I loved helping students explore a logic puzzle about a pirate captain and crew (complete with pirate hats).</p>
                     <p>David H.</p>
